k8sprjs/ghost/resources/ghost.namespace.yaml
# Namespace for the Ghost components
apiVersion: v1
kind: Namespace

metadata:
  name: ghost
