k8sprjs/ghost/resources/ghost.homelab.cloud.ingressroute.traefik.yaml
# HTTPS ingress for Ghost
apiVersion: traefik.io/v1alpha1
kind: IngressRoute

metadata:
  name: ghost.homelab.cloud
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`ghost.homelab.cloud`)
    services:
    - kind: Service
      name: server-ghost
      passHostHeader: true
      port: server
      scheme: http
  - kind: Rule
    match: Host(`ghostadmin.homelab.cloud`) && PathPrefix(`/ghost/api/admin`)
    middlewares:
    - name: ghostadmin.ipwhitelist
    services:
    - kind: Service
      name: server-ghost
      passHostHeader: true
      port: server
      scheme: http
  tls:
    secretName: ghost.homelab.cloud-tls
